# Particle-Simulator

./: .gitignore  README.md  empty_simulation.py  particle_simulator.py  pyproject.toml
Particle Simulator/: ParticleSimulator.py  particle_simulator.py
Particle Simulator/particle_simulator/: code_window.py  error.py  extra_window.py  grid.py  gui.py  particle.py  particle_data.py  saveManager.py  save_manager.py  simulation.py
example_simulations/: wind_simulation.sim
particle_simulator/: color.py  controller_state.py  conversion.py  extra_window.py  factory.py  geometry.py  grid.py  gui.py  gui_widgets.py  interaction_transformer.py  mouse_mode.py  painter.py  particle.py  particle_data.py  particle_dict.py  particle_factory.py  particle_interaction.py  particle_properties.py  particle_state.py  rectangle.py  save_manager.py  sim_format.py  sim_gui_settings.py  sim_pickle.py  simulation.py  simulation_data.py  simulation_state.py  utils.py
particle_simulator/engine/: conversion.py  event.py  geometry.py  grid.py  interaction_transformer.py  particle.py  particle_factory.py  particle_interaction.py  simulation_data.py  simulation_state.py
particle_simulator/gui/: bar_widget.py  code_window.py  extra_window.py  gui.py  gui_widgets.py  particle_widget.py  simulation_widget.py  utils.py  variable.py
particle_simulator/io/: save_manager.py  sim_pickle.py
tests/: test_bar_widget.py  test_event.py  test_gui.py  test_simulation.py  test_simulation_state.py
